[gd_scene load_steps=17 format=3 uid="uid://ceij65gtb5dtc"]

[ext_resource type="Script" path="res://UiScenes/settings.gd" id="1_gb3ru"]
[ext_resource type="Texture2D" uid="uid://c54jiyg28sikf" path="res://Art/Background.png" id="1_j8vww"]
[ext_resource type="FontFile" uid="uid://cbhh37to6jjdh" path="res://Art/Fonts/Silkscreen/Silkscreen-Bold.ttf" id="2_j04ue"]
[ext_resource type="Texture2D" uid="uid://cpdtuhtcigmfv" path="res://Art/UI/CheckBoxNotPressed.png" id="3_5ukxq"]
[ext_resource type="Texture2D" uid="uid://bqugv11mytxi7" path="res://Art/UI/Button.png" id="3_i0hpr"]
[ext_resource type="Texture2D" uid="uid://76kh3um6rwue" path="res://Art/UI/CheckBoxPressed.png" id="4_7frav"]
[ext_resource type="Texture2D" uid="uid://c638qxi6elky0" path="res://Art/UI/ButtonPressed.png" id="4_eee2y"]
[ext_resource type="FontFile" uid="uid://5dp2m40qp7cv" path="res://Art/Fonts/Silkscreen/Silkscreen-Regular.ttf" id="5_hrw37"]
[ext_resource type="Texture2D" uid="uid://bjk22rb0opkvo" path="res://Art/UI/CheckBoxMouseOver.png" id="5_qwc70"]
[ext_resource type="Texture2D" uid="uid://bt0wvfl8dhxed" path="res://Art/UI/VolumeSlider.png" id="9_uv3n1"]
[ext_resource type="Texture2D" uid="uid://w8rymnuwhhbr" path="res://Art/UI/VolumeBar.png" id="10_2pfyi"]
[ext_resource type="Texture2D" uid="uid://b1r3i2duelo6o" path="res://Art/UI/InvisibleButtonV2.png" id="10_kj38s"]
[ext_resource type="Texture2D" uid="uid://bjjcxc2lnt7dw" path="res://Art/UI/InvisibleButtonMouseOverV2.png" id="10_xd3i4"]
[ext_resource type="AudioStream" uid="uid://cbr82oiadfk4i" path="res://Art/Sounds/bigPew.wav" id="14_28sf2"]
[ext_resource type="AudioStream" uid="uid://7kx1gc5evw5s" path="res://Art/boom.wav" id="15_1cghp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f7rhp"]
texture = ExtResource("10_2pfyi")
texture_margin_left = 50.0
texture_margin_right = 50.0
expand_margin_top = 30.0
expand_margin_bottom = 30.0

[node name="Settings" type="Control" groups=["Settings"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gb3ru")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_j8vww")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_top = 59.0
offset_right = 192.0
offset_bottom = 136.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_j04ue")
theme_override_font_sizes/font_size = 80
text = "Settings"

[node name="ScreenShakeCheckBox" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 380.0
offset_right = 580.0
offset_bottom = 860.0
scale = Vector2(0.24, 0.24)
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_5ukxq")
texture_pressed = ExtResource("4_7frav")
texture_hover = ExtResource("5_qwc70")

[node name="Label" type="Label" parent="ScreenShakeCheckBox"]
layout_mode = 0
offset_left = 654.167
offset_top = 141.667
offset_right = 1933.17
offset_bottom = 334.667
theme_override_fonts/font = ExtResource("5_hrw37")
theme_override_font_sizes/font_size = 150
text = "Screen Shake"

[node name="ParticleEffectsCheckBox" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 535.0
offset_right = 580.0
offset_bottom = 1015.0
scale = Vector2(0.24, 0.24)
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_5ukxq")
texture_pressed = ExtResource("4_7frav")
texture_hover = ExtResource("5_qwc70")

[node name="Label" type="Label" parent="ParticleEffectsCheckBox"]
layout_mode = 0
offset_left = 654.167
offset_top = 141.667
offset_right = 1933.17
offset_bottom = 334.667
theme_override_fonts/font = ExtResource("5_hrw37")
theme_override_font_sizes/font_size = 150
text = "Particle Effects"

[node name="MoreStatsCheckBox" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 690.0
offset_right = 580.0
offset_bottom = 1170.0
scale = Vector2(0.24, 0.24)
toggle_mode = true
texture_normal = ExtResource("3_5ukxq")
texture_pressed = ExtResource("4_7frav")
texture_hover = ExtResource("5_qwc70")

[node name="Label" type="Label" parent="MoreStatsCheckBox"]
layout_mode = 0
offset_left = 654.167
offset_top = 141.667
offset_right = 1933.17
offset_bottom = 334.667
theme_override_fonts/font = ExtResource("5_hrw37")
theme_override_font_sizes/font_size = 150
text = "More Stats"

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -890.0
offset_top = -480.0
offset_right = 70.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.2)
texture_normal = ExtResource("3_i0hpr")
texture_hover = ExtResource("4_eee2y")

[node name="Label" type="Label" parent="BackButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -113.5
offset_right = 196.0
offset_bottom = 53.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.2)
theme_override_fonts/font = ExtResource("5_hrw37")
theme_override_font_sizes/font_size = 130
text = "back"

[node name="SecretButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 568.0
offset_top = 358.0
offset_right = 868.0
offset_bottom = 458.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("10_kj38s")
texture_hover = ExtResource("10_xd3i4")

[node name="SoundEffectSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 1478.0
offset_top = 390.0
offset_right = 2005.0
offset_bottom = 530.0
scale = Vector2(0.6, 0.6)
theme_override_constants/grabber_offset = 0
theme_override_icons/grabber = ExtResource("9_uv3n1")
theme_override_icons/grabber_highlight = ExtResource("9_uv3n1")
theme_override_icons/grabber_disabled = ExtResource("9_uv3n1")
theme_override_styles/slider = SubResource("StyleBoxTexture_f7rhp")
value = 50.0
ticks_on_borders = true

[node name="Label" type="Label" parent="SoundEffectSlider"]
layout_mode = 0
offset_left = -101.667
offset_top = -153.333
offset_right = 532.333
offset_bottom = -50.3333
theme_override_fonts/font = ExtResource("5_hrw37")
theme_override_font_sizes/font_size = 70
text = "Sound Effects"

[node name="Value" type="Label" parent="SoundEffectSlider"]
layout_mode = 0
offset_left = -218.333
offset_top = 13.3334
offset_right = -68.3333
offset_bottom = 116.333
theme_override_fonts/font = ExtResource("5_hrw37")
theme_override_font_sizes/font_size = 70
text = "50"

[node name="RedBallSound" type="AudioStreamPlayer2D" parent="SoundEffectSlider" groups=["SoundEffect"]]
stream = ExtResource("14_28sf2")

[node name="RainbowBallSound" type="AudioStreamPlayer2D" parent="SoundEffectSlider" groups=["SoundEffect"]]
process_mode = 3
stream = ExtResource("15_1cghp")

[node name="MusicSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 1478.0
offset_top = 627.0
offset_right = 2005.0
offset_bottom = 767.0
scale = Vector2(0.6, 0.6)
theme_override_constants/grabber_offset = 0
theme_override_icons/grabber = ExtResource("9_uv3n1")
theme_override_icons/grabber_highlight = ExtResource("9_uv3n1")
theme_override_icons/grabber_disabled = ExtResource("9_uv3n1")
theme_override_styles/slider = SubResource("StyleBoxTexture_f7rhp")
value = 50.0
ticks_on_borders = true

[node name="Label" type="Label" parent="MusicSlider"]
layout_mode = 0
offset_left = 103.333
offset_top = -146.667
offset_right = 349.333
offset_bottom = -43.6667
theme_override_fonts/font = ExtResource("5_hrw37")
theme_override_font_sizes/font_size = 70
text = "Music"

[node name="Value" type="Label" parent="MusicSlider"]
layout_mode = 0
offset_left = -218.333
offset_top = 13.3334
offset_right = -68.3333
offset_bottom = 116.333
theme_override_fonts/font = ExtResource("5_hrw37")
theme_override_font_sizes/font_size = 70
text = "50"

[connection signal="toggled" from="ScreenShakeCheckBox" to="." method="_on_screen_shake_check_box_toggled"]
[connection signal="toggled" from="ParticleEffectsCheckBox" to="." method="_on_particle_effects_check_box_toggled"]
[connection signal="toggled" from="MoreStatsCheckBox" to="." method="_on_more_stats_check_box_toggled"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="SecretButton" to="." method="_on_secret_button_pressed"]
[connection signal="value_changed" from="SoundEffectSlider" to="." method="_on_sound_effect_slider_value_changed"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_music_slider_value_changed"]
